k8s/account-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
  namespace: fintrack

spec:
  replicas: 3

  selector:
    matchLabels:
      app: account-service
      version: v1

  template:
    metadata:
      labels:
        app: account-service
        version: v1

    spec:
      containers:
      - name: account-service
        image: account-service:v1

        ports:
        - containerPort: 8080

        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"

          limits:
            memory: "512Mi"
            cpu: "500m"

        livenessProbe:
          httpGet:
            path: /health
            port: 8080

        readinessProbe:
          httpGet:
            path: /health
            port: 8080
