k8s/payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: fintrack

spec:
  replicas: 2

  selector:
    matchLabels:
      app: payment-service

  template:
    metadata:
      labels:
        app: payment-service

    spec:
      containers:
      - name: payment-service
        image: payment-service:v1

        ports:
        - containerPort: 8081

        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"

          limits:
            memory: "512Mi"
            cpu: "500m"
