k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-service
  namespace: fintrack

spec:
  selector:
    app: account-service

  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: fintrack

spec:
  selector:
    app: payment-service

  ports:
  - port: 80
    targetPort: 8081
