k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fintrack-ingress
  namespace: fintrack

spec:
  ingressClassName: alb

  rules:
  - host: fintrack.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: account-service
            port:
              number: 80
